<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Media Player</string>

    <!-- Strings for activity_main -->
    <string name="activity_main_label">Main (Home) Activity</string>
    <string name="activity_main_description">
        The Home Page or Main Activity displays four options for the user.\n
        User may select anywhere within the corresponding button/text area.\n
        Each button is the entire colored text area enclosing the label.
    </string>
    <string name="activity_player">Play Now</string>
    <string name="activity_media">Media Catalog</string>
    <string name="activity_buy">Buy More Songs</string>
    <string name="activity_recents">Recently Played</string>

    <!-- Strings on activity_play_song (Play Now) -->
    <string name="activity_play_song_label">Play Now Activity</string>
    <string name="activity_play_song_description">
        The first TextViews allows user to return to the home activity.\n
        The next several TextViews will displays info about the currently playing song.\n
        If nothing is playing, the info from the last file played will display.\n
        User may select a check box to add the current file to the favorites list.\n
        The user may select the play/stop button to start or stop playing the current file.\n
        If current file is not the desired one, user can user button to go to select\n
        a file from the library. \n
        This functionality will be implemented using the PlaySong class.\n
    </string>
    <string name="desc_player_activity">Now Playing your selected media file:</string>
    <string name="currentFileName">Hey Jude.mp3</string>
    <string name="currentPerformer">The Beatles</string>
    <string name="currentCategory">Rock</string>
    <string name="checkbox_label">Add to Favorites</string>
    <string name="newSelection">Select from Library</string>
    <string name="goHome">OOPS! Return to previous activity</string>
    <string name="playStopButtonDescription">Toggle Button to Start or Stop playing the queued file.</string>


    <!-- Strings on activity_media_categories (Media Catalog) -->
    <string name="activity_media_categories_label">Media Catalog Activity</string>
    <string name="activity_media_categories_description">
        The first TextViews/Button allows the user to return to the home activity.\n
        The "Top 10" TextView/Button displays the 10 most recently played files.\n
        The Go to Full Media Catalog takes user to the full list of available files.\n
        This functionality will be implemented using the MediaCategories class.\n
        The Open Player option allows user to open the player activity. \n
        If a selection is make from either list, it will be loaded into the Player.\n
        If no selection is made, the Player will open with the last played file still loaded.
    </string>
    <!-- Reuse: <string name="goHome"> -->
    <string name="displayTop10Favorites">See my top 10 Favorites</string>
    <string name="displayFullMediaCatalog">Open Full Media List</string>
    <string name="openPlayerInMedia">Open Player</string>


    <!-- Strings on activity_buy-now (Buy More Songs) -->
    <string name="buy_now_activity_label">Buy Now Activity</string>
    <string name="buy_now_activity_description">
        The first TextViews/Button allows the user to return to the home activity.\n
        (Not visible to user): The Google Pay library to list of dependencies in the app.
        The Ready To Checkout Checkbox must be checked in order for Google Play Button to appear.\n
        Once the checkbox is checked, the Google Pay API runs the checkout and cc payment sequence.\n
        This functionality will be implemented using the BuyNow class.\n
    </string>
    <string name="notReadyToCheckout">OOPS! Not ready to buy yet: Please take me back!</string>
    <string name="desc_buy_activity">Use Google Pay to buy songs:</string>
    <string name="pay_step_one">1. User selects a song to buy on Goggle Play. </string>
    <string name="pay_step_three">2. After a selection is made, the user MUST FIRST tick the\n
        checkboxReadyToPay box in order to see the GPay Button appear.</string>
    <string name="pay_step_four">3. Once it appears, user clicks on the GPay button to begin the\n
        checkout sequence of the GPay API starting with the loadPaymentData(request) process.</string>
    <string name="pay_step_five">4. Payment data object is returned as an Activity result and token.</string>
    <string name="ready_to_pay">Ready to Checkout</string>


    <!-- Strings on activity_recently_played (Recently Played) -->
    <string name="recently_played_label">Recently Played Activity</string>
    <string name="recently_played_description">
        The first TextViews/Button allows the user to return to the home activity.\n
        The next option opens up the list of 10 most frequently played Favorites\n
        The other option opens a list of 10 most frequently played\n
        regardless of whether they are marked as favorites or not.\n
        This functionality will be implemented using the RecentlyPlayed class.\n
        The Open Player option allows user to open the player activity. \n
        If a selection is make from either list, it will be loaded into the Player.\n
        If no selection is made, the Player will open with the last played file still loaded.
    </string>
    <!-- Reuse: <string name="goHome"> -->
    <!-- Reuse: <string name="displayTop10Favorites"> -->
    <string name="displayTop10ofALL">See my top 10: faves or not!</string>
    <string name="openPlayerFromRecents">Open Player</string>


</resources>
