<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".BuyNow">

        <TextView
            android:id="@+id/buy_now_activity_label"
            style="@style/ActivityStyle"
            android:background="@color/background"
            android:text="@string/buy_now_activity_label"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buy_now_activity_description"
            style="@style/ActivityStyle"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:scrollbars="vertical"
            android:text="@string/buy_now_activity_description"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/not_ready_to_pay"
            style="@style/ActivityStyle"
            android:layout_width="match_parent"
            android:background="@color/favorites_background"
            android:text="@string/not_ready_to_pay" />

        <CheckBox
            android:id="@+id/checkbox_ready_to_pay"
            style="@style/ActivityStyle"
            android:layout_width="match_parent"
            android:background="@color/background"
            android:text="@string/checkbox_ready_to_pay" />

        <TextView
            style="@style/ActivityStyle"
            android:background="@color/player_activity"
            android:color="@android:color/white"
            android:text="@string/desc_buy_activity" />

        <TextView
            style="@style/ActivityStyle"
            android:background="@color/song_background"
            android:color="@android:color/white"
            android:text="@string/pay_step_one" />

        <TextView
            style="@style/ActivityStyle"
            android:background="@color/player_activity"
            android:color="@android:color/white"
            android:text="@string/pay_step_three" />

        <TextView
            style="@style/ActivityStyle"
            android:background="@color/song_background"
            android:color="@android:color/white"
            android:text="@string/pay_step_four" />

        <TextView
            style="@style/ActivityStyle"
            android:background="@color/player_activity"
            android:color="@android:color/white"
            android:text="@string/pay_step_five" />

        <!-- ONLY APPEARS IF isReadyToPay() returns true -->
        <ImageButton
            android:id="@+id/player_toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_ready_to_pay"
            android:layout_margin="32dp"
            android:src="@drawable/googlepay" />

    </LinearLayout>
</ScrollView>